--- a/src/life-dialogs/life-pattern-chooser.html
+++ b/src/life-dialogs/life-pattern-chooser.html
@@ -33,8 +33,8 @@
       </paper-dialog-scrollable>
 
       <div class="buttons">
-        <paper-button disabled="[[!canGoBack]]" on-tap="goBack">Back</paper-button>
-        <paper-button disabled="[[!canGoNext]]" on-tap="goNext">Next</paper-button>
+        <paper-button id="goBack" disabled="[[!canGoBack]]" on-tap="_handleGoBack">Back</paper-button>
+        <paper-button id="goNext" disabled="[[!canGoNext]]" on-tap="_handleGoNext">Next</paper-button>
         <paper-button dialog-confirm autofocus>OK</paper-button>
       </div>
     </paper-dialog>
@@ -123,9 +123,30 @@
         }
 
         this._domForSelectedPattern = e.currentTarget;
-        this._selectedPattern = e.model.get('item');
+        this._selectedPattern = {
+          page: this.currentPage,
+          pattern: e.model.get('item'),
+        };
 
         this._domForSelectedPattern.setAttribute('selected', '');
+      },
+      __removeOrRestoreSelectedAttr: function() {
+        if(this._selectedPattern.page === this.currentPage) {
+          // restore
+          this._domForSelectedPattern.setAttribute('selected', '');
+        }
+        else {
+          // remove
+          this._domForSelectedPattern.removeAttribute('selected');
+        }
+      },
+      _handleGoBack: function() {
+        this.goBack();
+        this.__removeOrRestoreSelectedAttr();
+      },
+      _handleGoNext: function() {
+        this.goNext();
+        this.__removeOrRestoreSelectedAttr();
       },
 
       open: function() {
