--- a/src/life-dialogs/life-pattern-chooser.html
+++ b/src/life-dialogs/life-pattern-chooser.html
@@ -35,7 +35,7 @@
       <div class="buttons">
         <paper-button id="goBack" disabled="[[!canGoBack]]" on-tap="_handleGoBack">Back</paper-button>
         <paper-button id="goNext" disabled="[[!canGoNext]]" on-tap="_handleGoNext">Next</paper-button>
-        <paper-button dialog-confirm autofocus>OK</paper-button>
+        <paper-button id="ok" dialog-confirm autofocus on-tap="_closeDialog">OK</paper-button>
       </div>
     </paper-dialog>
 
@@ -147,6 +147,9 @@
       _handleGoNext: function() {
         this.goNext();
         this.__removeOrRestoreSelectedAttr();
+      },
+      _closeDialog: function() {
+        this.fire('pattern-selected', {pattern: this._selectedPattern.pattern });
       },
 
       open: function() {
