--- a/src/life-behaviors/life-canvas-behavior.html
+++ b/src/life-behaviors/life-canvas-behavior.html
@@ -111,8 +111,8 @@
       return this.canvas.toDataURL();
     },
 
-    getRLE: function(){
-      return this._gameManager.toRLE();
+    getRLE: function(region){
+      return this._gameManager.toRLE(region);
     },
 
     // interface
