hide hover to play

--- a/src/life-brush-editor/life-brush-editor.html
+++ b/src/life-brush-editor/life-brush-editor.html
@@ -57,7 +57,7 @@
             <paper-icon-button icon="settings" class="dropdown-trigger"></paper-icon-button>
             <div class="dropdown-content">
               <paper-checkbox checked="{{editMode}}">Edit mode</paper-checkbox>
-              <paper-checkbox checked="{{hoverToPlay}}">Hover to play</paper-checkbox>
+              <!-- <paper-checkbox checked="{{hoverToPlay}}">Hover to play</paper-checkbox> -->
             </div>
           </dropdown-wrapper>
         </div>
