refactor html structures

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 
   </head>
   <body>
-    <app-shell></app-shell>
+    <!-- <app-shell></app-shell> -->
+    <life-app></life-app>
     <script type="text/javascript">
       (function() {
         if ('registerElement' in document
