--- a/test/life-app/life-app_test.html
+++ b/test/life-app/life-app_test.html
@@ -19,11 +19,37 @@
     </test-fixture>
 
     <script>
-      suite('life-app', function() {
+      suite('life-app', () => {
+        let app;
 
-        test('instantiating the element works', function() {
-          var element = fixture('basic');
-          assert.equal(element.is, 'life-app');
+        setup(() => {
+          app = fixture('basic');
+
+        });
+
+        test('instantiating the element works',() => {
+          assert.equal(app.is, 'life-app');
+        });
+
+        test('queryParams works', () => {
+          app.route = {
+            prefix: '',
+            path: '/playground',
+            __queryParams: {
+              state: "playing"
+            }
+          };
+          assert.isTrue(app.app.controller.isPlaying);
+
+
+          app.route = {
+            prefix: '',
+            path: '/playground',
+            __queryParams: {
+              state: "paused"
+            }
+          };
+          assert.isFalse(app.app.controller.isPlaying);
         });
 
       });
