refactor around life-catalog

--- a/src/app-shell/app-shell.html
+++ b/src/app-shell/app-shell.html
@@ -5,7 +5,7 @@
 <link rel="import" href="../../bower_components/iron-pages/iron-pages.html">
 
 <link rel="import" href="../life-app/life-app.html">
-<link rel="import" href="../life-patterns/life-patterns.html">
+<!-- <link rel="import" href="../life-patterns/life-patterns.html"> -->
 <script src="../../bower_components/page/page.js"></script>
 
 <dom-module id="app-shell">
