--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <base href="http://localhost:8080/life" target="_blank">
     <link rel="manifest" href="manifest.json">
     <!-- <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script> -->
-    <link rel="import" href="src/app-shell/app-shell.html">
+    <!-- <link rel="import" href="src/app-shell/app-shell.html"> -->
 
     <link rel="import" href="src/life-app/life-app.html">
-    <link rel="import" href="src/life-canvas/life-canvas.html">
+    <!-- <link rel="import" href="src/life-canvas/life-canvas.html"> -->
 
     <style>
       html, body{
