--- a/src/life-catalog/life-catalog.html
+++ b/src/life-catalog/life-catalog.html
@@ -4,40 +4,39 @@
 <link rel="import" href="../../bower_components/paper-styles/default-theme.html">
 <link rel="import" href="../../bower_components/paper-material/paper-material.html">
 
+<link rel="import" href="../life-behaviors/life-pattern-catalog-behavior.html">
 <link rel="import" href="../life-preview-canvas/life-preview-canvas.html">
 
 
-<dom-module id="life-patterns">
+<dom-module id="life-catalog">
   <template>
     <app-route
-        route="{{route}}"
-        pattern="/page/:page"
-        data="{{routeData}}"></app-route>
+      route="{{route}}"
+      pattern="/page/:page"
+      data="{{_routeData}}"></app-route>
 
-    <template is="dom-repeat" items="[[catalogForPage]]">
-      <div class="card">
-        <!-- <life-preview-canvas width="240" height="240" auto-play rle="[[item.payload]]" pattern-width="[[item.meta.x]]" pattern-height="[[item.meta.y]]"></life-preview-canvas> -->
-        <life-preview-canvas width="240" height="240" auto-play pattern="[[item]]"></life-preview-canvas>
+    <div class="patterns">
+      <template is="dom-repeat" items="[[currentPatterns]]">
+        <div class="card">
+          <life-preview-canvas width="240" height="240" auto-play pattern="[[item]]"></life-preview-canvas>
 
-        <!-- <div role="listbox">
-          <paper-item>[[item.name]]</paper-item>
-          <paper-item>[[item.author]]</paper-item>
-          <paper-item>[[item.comments]]</paper-item>
-          <paper-item>[[item.meta.rule]]</paper-item>
-          <paper-item>[[item.meta.x]]</paper-item>
-          <paper-item>[[item.meta.y]]</paper-item>
-        </div> -->
-        <div class="card-content">
-          <div class="title">[[item.name]]</div>
-          <div class="author">[[item.author]]</div>
-          <div class="comments">[[item.comments]]</div>
+          <div class="card-content">
+            <div class="title">[[item.name]]</div>
+            <div class="author">[[item.author]]</div>
+            <div class="comments">[[item.comments]]</div>
+          </div>
         </div>
-      </div>
-    </template>
+      </template>
+    </div>
+
+    <div class="buttons">
+      <paper-button id="goBack" disabled="[[!canGoBack]]" on-tap="goBack">Back</paper-button>
+      <paper-button id="goNext" disabled="[[!canGoNext]]" on-tap="goNext">Next</paper-button>
+    </div>
   </template>
 
   <style include="paper-material">
-    :host{
+    .patterns {
       display: -webkit-flex;
       display: flex;
       /*-webkit-flex-direction: column;
@@ -91,38 +90,43 @@
 
   <script>
     Polymer({
-      is: 'life-patterns',
+      is: 'life-catalog',
+      behaviors: [LifePatternCatalogBehavior],
       properties: {
-        app: {
-          type: Object
-        },
-        catalogForPage: {
-          type: Object,
-          computed: '_computeCatalogForPage(app._catalog, currentPage, perPage)'
-        },
-        currentPage: {
-          type: Number,
-          value: 0
-        },
-        perPage: {
-          type: Number,
-          value: 12,
-        },
-        pageCount: {
-          type: Number,
-          computed: '_computePageCount(app._catalog, perPage)'
-        }
+        // route: Object,
+        // routeData: Object,
+
+        // app: {
+        //   type: Object
+        // },
+        // catalogForPage: {
+        //   type: Object,
+        //   computed: '_computeCatalogForPage(app._catalog, currentPage, perPage)'
+        // },
+        // currentPage: {
+        //   type: Number,
+        //   value: 0
+        // },
+        // perPage: {
+        //   type: Number,
+        //   value: 12,
+        // },
+        // pageCount: {
+        //   type: Number,
+        //   computed: '_computePageCount(app._catalog, perPage)'
+        // }
 
 
       },
 
       observers: [
-        '_routePageChanged(routeData.page)',
+        '_routePageChanged(_routeData.page)',
       ],
 
       _routePageChanged: function(page) {
         this.currentPage = page;
       },
+
 
       // _pager: function(item){
       //   if(Math.random() > 0.98){
@@ -133,13 +137,13 @@
       //     return false;
       //   }
       // }
-      _computePageCount: function(catalog, perPage){
-        return Math.ceil(catalog.length / perPage);
-      },
-
-      _computeCatalogForPage: function(catalog, currentPage, perPage){
-        return catalog.slice(currentPage * perPage, currentPage * perPage + perPage);
-      }
+      // _computePageCount: function(catalog, perPage){
+      //   return Math.ceil(catalog.length / perPage);
+      // },
+      //
+      // _computeCatalogForPage: function(catalog, currentPage, perPage){
+      //   return catalog.slice(currentPage * perPage, currentPage * perPage + perPage);
+      // }
     });
   </script>
 </dom-module>
