--- a/src/life-app/life-app.html
+++ b/src/life-app/life-app.html
@@ -54,7 +54,7 @@
 
     <life-nav
       title="PlayGround"
-      page="{{page}}"
+      page="[[page]]"
       collection="{{app.saves}}"></life-nav>
 
     <iron-pages role="main" selected="[[page]]" attr-for-selected="name" fallback-selection="path-warning">
@@ -86,10 +86,9 @@
       <life-path-warning name="path-warning"></life-path-warning>
     </iron-pages>
 
-    <life-save-dialog id="infoViewDialog"></life-save-dialog>
+    <life-save-dialog id="infoViewDialog" target="{{app._selectedSave}}" on-title-change="_handleTitleChange"></life-save-dialog>
     <life-settings-dialog id="settingsDialog" app="{{app}}"></life-settings-dialog>
 
-    <!-- TODO: create life-pattern-data element -->
     <iron-ajax auto url="../../patterns-lite.json" handle-as="json" on-response="handleResponse"></iron-ajax>
   </template>
 
@@ -175,8 +174,7 @@
       listeners: {
         'add-collection': '_addCollection',
         'show-collection-detail': '_showCollectionDetail',
-        'open-settings-dialog': '_openSettingsDialog',
-        'title-change': '_handleTitleChange'
+        'open-settings-dialog': '_openSettingsDialog'
       },
 
       ready: function() {
@@ -193,7 +191,6 @@
 
       _routePageChanged: function(page) {
         this.page = page;
-        this.set('route.path', page);
       },
 
       _queryParamsChanged: function(params){
